# Palettable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: App.cpp  App.hpp  Color.cpp  Color.hpp  Palette.cpp  Palette.hpp
src/: App.cpp  CMakeLists.txt  Color.cpp  Palette.cpp  main.cpp
